[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dengue-forecasting-dashboard"
version = "1.0.0"
description = "AI-powered dengue forecasting dashboard for Sri Lanka"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=1.5.0,<2.4.0",
    "numpy>=1.21.0,<2.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "tensorflow-cpu>=2.13.0,<2.18.0",
    "scikit-learn>=1.1.0,<2.0.0",
    "plotly>=5.0.0,<6.0.0",
    "openpyxl>=3.0.0,<4.0.0",
    "xlrd>=2.0.0,<3.0.0",
    "streamlit>=1.28.0,<2.0.0",
]

[tool.setuptools]
py-modules = [] 