[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dengue-forecasting-dashboard"
version = "1.0.0"
description = "AI-powered dengue forecasting dashboard for Sri Lanka"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit==1.39.0",
    "pandas==2.1.4",
    "numpy==1.24.4",
    "matplotlib==3.7.5",
    "seaborn==0.13.2",
    "tensorflow-cpu==2.13.1",
    "scikit-learn==1.3.2",
    "plotly==5.17.0",
    "openpyxl==3.1.2",
    "xlrd==2.0.1",
]

[tool.setuptools]
py-modules = [] 